--- a/libtales/libtales.vcxproj.filters
+++ b/libtales/libtales.vcxproj.filters
@@ -672,6 +672,9 @@
     <ClInclude Include="include\exception\TGenericException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\gamedata\TileMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\editors\AreaMetadataEntry.cpp">
@@ -1326,6 +1329,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\exception\TGenericException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gamedata\TileMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
